[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/Slime.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheets/Slime.png" type="Texture" id=2]
[ext_resource path="res://resources/materials/White.tres" type="Material" id=3]
[ext_resource path="res://resources/materials/Outline.tres" type="Material" id=4]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 54, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 18, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 36, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 54, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 0, 36, 18, 18 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 18, 36, 18, 18 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 36, 36, 18, 18 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 54, 36, 18, 18 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 0, 54, 18, 18 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 18, 54, 18, 18 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 36, 54, 18, 18 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 54, 54, 18, 18 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "jump",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6.05629, 5.04674 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 5.86319, 3.26848 )

[sub_resource type="Animation" id=36]
resource_name = "invincibility"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ) ]
}

[node name="Slime" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=[
"enemy",
]]
material = ExtResource( 4 )
frames = SubResource( 17 )
animation = "jump"
frame = 5
playing = true

[node name="HurtBox" type="Area2D" parent="AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/HurtBox"]
position = Vector2( 1.00113, -0.0417137 )
shape = SubResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.943874, 1.76976 )
shape = SubResource( 19 )

[node name="SpawnLocation" type="Position2D" parent="."]
position = Vector2( 1.00113, 2.50282 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/invincibility = SubResource( 36 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="AnimatedSprite/HurtBox" to="." method="_on_HurtBox_area_entered"]
